utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/valid/Common.option
package valid

typedef option Common {
    required prop label: string
    required prop required: boolean
}
