utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/invalid/Common.option
package invalid

typedef option Common {
    required prop label: string
    required prop required: boolean
}
